[gd_scene load_steps=2 format=3 uid="uid://4mpv3ptamsag"]

[ext_resource type="Script" uid="uid://da1tvpdvh54kx" path="res://main_menu.gd" id="1_06t4h"]

[node name="menu" type="Node2D"]
script = ExtResource("1_06t4h")

[node name="temp_back" type="ColorRect" parent="."]
offset_right = 1153.0
offset_bottom = 648.0
color = Color(0.411765, 0.411765, 0.411765, 0.737255)

[node name="new_game_button" type="Button" parent="."]
offset_left = 434.0
offset_top = 270.0
offset_right = 673.0
offset_bottom = 336.0
text = "New Game"

[node name="load_button" type="Button" parent="."]
offset_left = 434.0
offset_top = 353.0
offset_right = 672.0
offset_bottom = 419.0
text = "Load Save"

[node name="options_button" type="Button" parent="."]
offset_left = 433.0
offset_top = 432.0
offset_right = 672.0
offset_bottom = 499.0
text = "Options"

[node name="quit_button" type="Button" parent="."]
offset_left = 433.0
offset_top = 512.0
offset_right = 672.0
offset_bottom = 578.0
text = "Quit"

[connection signal="pressed" from="new_game_button" to="." method="_on_new_game_button_pressed"]
[connection signal="pressed" from="load_button" to="." method="_on_load_button_pressed"]
[connection signal="pressed" from="options_button" to="." method="_on_options_button_pressed"]
[connection signal="pressed" from="quit_button" to="." method="_on_quit_button_pressed"]
